@@ -7,11 +7,14 @@
 	  Mana no longer regenerates quickly for knocked out NPCs. Trying new dead
 	  body positioning method. Fixed last commit to not randomly remove the
 	  avatar's target.
-	Rev 7248:
-	* defaultkeys.txt: Fix description of walk keys
 
 2012-12-30	Malignant Manor <malignantmanor@users.sourceforge.net>
+	Rev 7246:
 	* actors.cc, combat.cc: Have the Avatar stop attacking unconscious actors
+	Rev 7248:
+	* defaultkeys.txt: Fix description of walk keys
+	Rev 7249:
+	* gamewin.cc: Save/load combat state
 
 2012-12-30	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* exult.cc, keyactions.*, keys.*: Walking and running keys no longer count
